--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:ui": "",
+    "lint": "eslint .",
+    "test": "node --test"
   },
   "author": "Mikko Kirkanen",
   "license": "MIT",
@@ -20,7 +22,6 @@
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "eslint": "^9.15.0",
-    "eslint-plugin-react": "^7.37.2",
     "globals": "^15.12.0",
     "nodemon": "^3.1.7"
   }
